2009-09-17  Andreas K. Foerster  <info@akfoerster.de>

	* avtaddons.h, filechooser.c (avta_file_selection):
	replaces avta_get_file, allows custom filter

	* avatarsay.c (is_graphic_file): new function
	(ask_avatar_image): use avta_file_selection

	* avatarsay.c (is_demo_or_text): new function
	(ask_file): adapted
	demo scripts/archives should have the extention ".avt" now
	example demos renamed accordingly

2009-09-16  Andreas K. Foerster  <info@akfoerster.de>

	* avatarsay.c: global variable avt_image removed,
	global variable avt_image_name renamed to avatar_image
	(set_avatar_image, load_avatar_image): new functions
	(use_avatar_image): removed
	many functions adapted

	* avatarsay.c (about_avatarsay):
	bold question - error message if license not found

2009-09-15  Andreas K. Foerster  <info@akfoerster.de>

	* avatarsay.c (ask_background_color, ask_balloon_color)
	(ask_avatar_image, settings_submenu): new functions
	(menu): adapted

	* avatarsay.c (run_script):
	fix: don't change directory, when reading from archive

2009-09-06  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.h, avatar.c (avt_import_xpm, avt_show_image_xpm):
	renamed functions
	(avt_import_XPM, avt_show_image_XPM):
	new deprecated wrappers for backward compatibility
	avatar-default.c: adapted

	* text2c: new script

2009-09-05  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.h: reorganized
	(avt_stream): new typedef

2009-08-25  Andreas K. Foerster  <info@akfoerster.de>

	* avttermsys.h, avttermsys.c (avta_closeterm): new function

2009-08-23  Andreas K. Foerster  <info@akfoerster.de>

	* avttermsys.h, avttermsys.c: new files
	avtterm.c: system-specific stuff separated out

	* avatar-audio.c:
	allow loading audio-data before audio is initialized, again

------------------------------------------------------------------------

2009-08-21  Andreas K. Foerster  <info@akfoerster.de>

	* version 0.17.1 released

2009-08-19  Andreas K. Foerster  <info@akfoerster.de>
