@@ -1,43 +1,37 @@
 /* XPM */
 static char * btn_cont_xpm[] = {
-/* This file is in the Public Domain */
-"32 32 7 1",
+"32 32 2 1",
 " 	c None",
-"#	c #413A34",
-":	c #413A34",
-"+	c #88796D",
-"@	c #D7BAA0",
-".	c #E9CCB1",
-"$	c #FFF0C2",
-"            $$$.....            ",
-"         $$$$$........@         ",
-"       $$$$$..........@@@       ",
-"      $$$$$............@@@      ",
-"     $$$$...............@++     ",
-"    $$$$#................+++    ",
-"   $$$$.###...............+++   ",
-"  $$$$..#####..............+++  ",
-"  $$$...#######............+++  ",
-" $$$$...#########...........+++ ",
-" $$$....###########.........+++ ",
-" $$.....#############.......+++ ",
-"$$$.....###############......+++",
-".$......#################....+:+",
-"........###################..+:+",
-"........####################.+:+",
-"........###################..+:+",
-"........#################....+:+",
-"........###############......::+",
-"........#############........::+",
-" .......###########.........+:: ",
-" .......#########...........::+ ",
-" .......#######............+::+ ",
-"  ......#####.............+::+  ",
-"  ......###...............+::+  ",
-"   .....#................+::+   ",
-"    ....................+::+    ",
-"     @++..............+:::+     ",
-"      @++++.........+::::+      ",
-"       @+++++++++++::::++       ",
-"         @@++:::::::+++         ",
-"            @+++++++            "};
+".	c #413A34",
+"                                ",
+"                                ",
+"                                ",
+"                                ",
+"                                ",
+"        .                       ",
+"        ...                     ",
+"        .....                   ",
+"        .......                 ",
+"        .........               ",
+"        ...........             ",
+"        .............           ",
+"        ...............         ",
+"        .................       ",
+"        ...................     ",
+"        ....................    ",
+"        ...................     ",
+"        .................       ",
+"        ...............         ",
+"        .............           ",
+"        ...........             ",
+"        .........               ",
+"        .......                 ",
+"        .....                   ",
+"        ...                     ",
+"        .                       ",
+"                                ",
+"                                ",
+"                                ",
+"                                ",
+"                                ",
+"                                "};
