@@ -1,43 +1,37 @@
 /* XPM */
 static char * btn_no_xpm[] = {
-/* This file is in the Public Domain */
-"32 32 7 1",
+"32 32 2 1",
 " 	c None",
-".	c #FFF0C2",
-"+	c #E9CCB1",
-"@	c #D7BAA0",
-"#	c #88796D",
-"$	c #CC0000",
-"%	c #413A34",
-"            ...+++++            ",
-"         .....++++++++@         ",
-"       .....++++++++++@@@       ",
-"      .....++++++++++++@@@      ",
-"     ....+++++++++++++++@##     ",
-"    ....+++++++++++++++++###    ",
-"   ....+++++++++++++++++++###   ",
-"  ....+++++++++++++++++++++###  ",
-"  ...++++++++++++++++++++++###  ",
-" ....+++++++++++++++++++++++### ",
-" ...++++++++++++++++++++++++### ",
-" ..+++++++++++++++++++++++++### ",
-"...++++++++++++++++++++++++++###",
-"+.+++$$$$$$$$$$$$$$$$$$$$$+++#%#",
-"+++++$$$$$$$$$$$$$$$$$$$$$+++#%#",
-"+++++$$$$$$$$$$$$$$$$$$$$$+++#%#",
-"+++++$$$$$$$$$$$$$$$$$$$$$+++#%#",
-"+++++$$$$$$$$$$$$$$$$$$$$$+++#%#",
-"+++++++++++++++++++++++++++++%%#",
-"+++++++++++++++++++++++++++++%%#",
-" +++++++++++++++++++++++++++#%% ",
-" +++++++++++++++++++++++++++%%# ",
-" ++++++++++++++++++++++++++#%%# ",
-"  ++++++++++++++++++++++++#%%#  ",
-"  ++++++++++++++++++++++++#%%#  ",
-"   ++++++++++++++++++++++#%%#   ",
-"    ++++++++++++++++++++#%%#    ",
-"     @##++++++++++++++#%%%#     ",
-"      @####+++++++++#%%%%#      ",
-"       @###########%%%%##       ",
-"         @@##%%%%%%%###         ",
-"            @#######            "};
+".	c #AA0000",
+"                                ",
+"                                ",
+"                                ",
+"                                ",
+"                                ",
+"                                ",
+"                                ",
+"                                ",
+"                                ",
+"                                ",
+"                                ",
+"                                ",
+"                                ",
+"     .....................      ",
+"     .....................      ",
+"     .....................      ",
+"     .....................      ",
+"     .....................      ",
+"                                ",
+"                                ",
+"                                ",
+"                                ",
+"                                ",
+"                                ",
+"                                ",
+"                                ",
+"                                ",
+"                                ",
+"                                ",
+"                                ",
+"                                ",
+"                                "};
