@@ -1,42 +1,67 @@
 /* XPM */
 static char * btn_xpm[] = {
-/* This file is in the Public Domain */
-"32 32 6 1",
+"32 32 32 1",
 " 	c None",
-":	c #413A34",
-"+	c #88796D",
-"@	c #D7BAA0",
-".	c #E9CCB1",
-"$	c #FFF0C2",
-"            $$$.....            ",
-"         $$$$$........@         ",
-"       $$$$$..........@@@       ",
-"      $$$$$............@@@      ",
-"     $$$$...............@++     ",
-"    $$$$.................+++    ",
-"   $$$$...................+++   ",
-"  $$$$.....................+++  ",
-"  $$$......................+++  ",
-" $$$$.......................+++ ",
-" $$$........................+++ ",
-" $$.........................+++ ",
-"$$$..........................+++",
-".$...........................+:+",
-".............................+:+",
-".............................+:+",
-".............................+:+",
-".............................+:+",
-".............................::+",
-".............................::+",
-" ...........................+:: ",
-" ...........................::+ ",
-" ..........................+::+ ",
-"  ........................+::+  ",
-"  ........................+::+  ",
-"   ......................+::+   ",
-"    ....................+::+    ",
-"     @++..............+:::+     ",
-"      @++++.........+::::+      ",
-"       @+++++++++++::::++       ",
-"         @@++:::::::+++         ",
-"            @+++++++            "};
+".	c #292422",
+"+	c #3C3530",
+"@	c #50473F",
+"#	c #645A51",
+"$	c #796551",
+"%	c #76695E",
+"&	c #85796D",
+"*	c #8D7964",
+"=	c #A18F7F",
+"-	c #B2947B",
+";	c #B19E8F",
+">	c #C1A285",
+",	c #CDAA8A",
+"'	c #CCAD93",
+")	c #C9B3A1",
+"!	c #D9B798",
+"~	c #D8B99F",
+"{	c #DFBFA5",
+"]	c #DFC1AC",
+"^	c #E4C19F",
+"/	c #D9C3AE",
+"(	c #DCC3A7",
+"_	c #E5C7AC",
+":	c #E5C8B4",
+"<	c #E1CAB3",
+"[	c #DFCBBA",
+"}	c #FDD1AB",
+"|	c #F7D7B9",
+"1	c #FFDCB4",
+"2	c #FFE8BE",
+"3	c #FFF3C6",
+"            11}}1}}^            ",
+"         123211}}}}}}^,         ",
+"       133322211}}}}^^!,,       ",
+"      233321}}^!!!!!^!,,>>      ",
+"     23331}!!!!!{{~,,,,>-->     ",
+"    2332}^!!!!!~{{{{{~'''--'    ",
+"   2332}!!!!{{{{]]:_____~'=='   ",
+"  }232}!!!~{{{{{]::<:::_:{-*=~  ",
+"  233}!!~{{(({_<:<<<]]:<::]=%-  ",
+" 2332^!!~{((_<<<<<<<]]::::])%%' ",
+" 233}!{_{({<<<<<<:::]::::::]*#= ",
+" 232^^____<<<<<[::::]:::::::;#* ",
+"1331^^{{(_<<<[[[::::]]::::::'%#>",
+"123}^{{~{/<<[[[[:::]]]]:]]::]%@=",
+"}}1^!{{{{//<[[[[:::]]]]]]]]]]%+*",
+"111!!!{{_<<<[[[[<::]]]]{{~~''$.%",
+"}1|^^{{__{{///<<<<(((({{~!!!!$.$",
+"1||^{{{{__{{]//(((((((^^!!!!,#.$",
+"|||^{{{{___({{{{(((({{{^!!!!>@.*",
+"||||{{{{{{{{(({({((({{{{~!~!=++=",
+" |||{({{{{~~~{{{_^{{{~~~~~~'%.@ ",
+" __</{{{{~~~~{{__{{{~~~~~~{;@.% ",
+" <//<//(~~~~~{{{^^{~~~~~~/)*.+= ",
+"  [//<///~{{{{{{~~~~~~~///=@.#  ",
+"  [/)//</({(~~{{~~~~~]]]/;#.+=  ",
+"   /);)<<<<_{{{{~{]/]]:<;#..&   ",
+"    );;)/<<<<<//]]]<:</;#..%    ",
+"     );==)<<<<<//[[[[)&@..%     ",
+"      )=&&=;)/[[[/);&@..+&      ",
+"       /;&##%&&&&%#@..+#;       ",
+"         )=&#@++..++@%=         ",
+"            );=&&&=;            "};
